--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-/.venv/
-/.idea/
-/.idea/*
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.env
+.venv/
+venv/
+
+# IDE
+.idea/
+.vscode/
+
+# OS
+.DS_Store
+Thumbs.db
